--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+    </properties>
+
     <groupId>sk.stecman.lukas</groupId>
     <artifactId>ProjectObjectModelGit</artifactId>
     <version>1.0</version>
@@ -38,8 +43,5 @@
             <version>5.15.1</version>
         </dependency>
 
-
-
     </dependencies>
-
 </project>
